@@ -9,8 +9,14 @@ Version 0.7
 
 - Added Python traceback lexer, thanks to Tim Hatch.
 
+- Added Mako lexers by Ben Bangert.
+
 - Added "fruity" style, another dark background originally vim-based theme.
 
+- Added sources.list lexer by Dennis Kaarsemaker.
+
+
+=======
 - Fixed tickets #167, #178, #179, #180.
 
 - Added token stream filters.
